# stm32l4-hal

./: LICENSE  README.md
stm32-nucleo-l4r5zi/: CMakeLists.txt  Cargo.toml  build.rs  rustfmt.toml
stm32-nucleo-l4r5zi/cmake/: arm-none-eabi.cmake
stm32-nucleo-l4r5zi/include/hal/: lib.h
stm32-nucleo-l4r5zi/src/: gpio.rs  lib.c  lib.rs  macros.rs  semih.rs  uart.rs
stm32-nucleo-l4r5zi/src/semih/: macros.rs  mod.rs
